[project]
name = "circletracker"
version = "0.1.0"
description = "Future production-ready expense tracker"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.128.0",
    "psycopg-binary>=3.3.2",
    "pydantic>=2.12.5",
    "ruff>=0.14.14",
    "structlog>=25.5.0",
    "ty>=0.0.14",
    "uvicorn>=0.40.0",
]
