[project]
name = "circle_tracker"
version = "0.1.0"
description = "Future production-ready expense tracker"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "psycopg-pool>=3.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "ruff>=0.14.14",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
]
[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/circle_tracker"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
    "PERF",   # perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "T20",    # flake8-print (no print statements)
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
    "PIE",    # flake8-pie
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "FLY",    # flynt (f-string conversion)
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
]

ignore = [
    "PLR0913",  # too many arguments — в FastAPI часто бывает
    "PLR2004",  # magic value comparison — иногда ок
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]  # в тестах unused args и magic values — норма

[tool.ruff.lint.isort]
known-first-party = ["circle_tracker"]
